background img add, font, colors varables add

--- a/src/Scss/index.scss
+++ b/src/Scss/index.scss
@@ -1,1 +1,4 @@
+@import 'Variables';
 @import '../Components/App/App.scss';
+@import '../Components/Header/Header.scss';
+@import '../Containers/Results/Results.scss';
