dropdowns have colors and styles

--- a/src/Scss/index.scss
+++ b/src/Scss/index.scss
@@ -2,3 +2,4 @@
 @import '../Components/App/App.scss';
 @import '../Components/Header/Header.scss';
 @import '../Containers/Results/Results.scss';
+@import '../Containers/Form/Form.scss';
