instructions component add and styled

--- a/src/Scss/index.scss
+++ b/src/Scss/index.scss
@@ -3,3 +3,4 @@
 @import '../Components/Header/Header.scss';
 @import '../Containers/Results/Results.scss';
 @import '../Containers/Form/Form.scss';
+@import '../Components/Instructions/Instructions.scss';
