--- a/src/Scss/variables.scss
+++ b/src/Scss/variables.scss
@@ -4,11 +4,12 @@ $body-font: 'Josefin Slab', serif;
 
 
 //colors
-$fave: #D62E42;
-$accent: #8D2A27;
-$card-border: #FFAA33;
-$vegan-key: #49A010;
-$vegetarian-key: #BFB80C;
+$fave: hsl(353, 67%, 51%);
+$accent: hsl(2, 57%, 35%);
+$card-border: hsl(35, 100%, 60%);
+$instructions: hsl(78, 23%, 85%);
+$vegan-key: hsl(96, 82%, 35%);
+$vegetarian-key: hsl(58, 88%, 40%);
 
 
 //animations
