footer set up and positioned

--- a/src/Containers/Form/Form.scss
+++ b/src/Containers/Form/Form.scss
@@ -2,6 +2,7 @@
   color: white;
   display: flex;
   flex-direction: row;
+  grid-area: form;
   justify-content: space-around;
     
   .Dropdown-control {
