--- a/src/Scss/index.scss
+++ b/src/Scss/index.scss
@@ -4,3 +4,4 @@
 @import '../Containers/Results/Results.scss';
 @import '../Containers/Form/Form.scss';
 @import '../Components/Instructions/Instructions.scss';
+@import '../Components/Footer/Footer.scss';
