--- a/src/Containers/Form/Form.scss
+++ b/src/Containers/Form/Form.scss
@@ -4,10 +4,18 @@
   flex-direction: row;
   grid-area: form;
   justify-content: space-around;
+
+  .Dropdown-root {
+    // border-top: 2px solid $accent;
+    // border-left: 2px solid $accent;
+    // border-right: 2px solid $accent;
+    border-radius: 2px;
+    box-shadow: 1px 1px 2px darken($fave, 30%);
+  }
     
   .Dropdown-control {
     background-color: $fave;
-    border: 1px solid transparent;
+    border: 2px solid $accent;
     color: white;
     font-family: $body-font;
     min-width: 15rem;
@@ -26,6 +34,30 @@
     &:hover {
       background-color: $accent;
       color: white;
+    }
+  }
+
+  .Dropdown-arrow {
+    border-color: white transparent transparent;
+  }
+
+  .is-open .Dropdown-arrow {
+    border-color: transparent transparent white;
+  }
+
+  button {
+    background-color: $fave;
+    border: 2px solid $accent;
+    border-radius: 2px;
+    box-shadow: 1px 1px 2px darken($fave, 30%);
+    color: white;
+    font-family: $body-font;
+    font-size: 1rem;
+
+    &:hover {
+      background-color: $accent;
+      border: 2px solid $fave;
+      text-decoration: underline;
     }
   }
 }
