--- a/src/Scss/index.scss
+++ b/src/Scss/index.scss
@@ -5,3 +5,4 @@
 @import '../Containers/Form/Form.scss';
 @import '../Components/Instructions/Instructions.scss';
 @import '../Components/Footer/Footer.scss';
+@import '../Components/RecipeCard/RecipeCard.scss';
