--- a/src/Scss/variables.scss
+++ b/src/Scss/variables.scss
@@ -1,15 +1,15 @@
 //fonts
 $fancy-font: 'Pacifico', cursive;
-$body-font: 'Josefin Slab', serif;
+$body-font: 'Open Sans', sans-serif;
 
 
 //colors
 $fave: hsl(353, 67%, 51%);
 $accent: hsl(2, 57%, 35%);
 $card-border: hsl(35, 100%, 60%);
-$instructions: hsl(78, 23%, 85%);
 $vegan-key: hsl(96, 82%, 35%);
 $vegetarian-key: hsl(58, 88%, 40%);
-
+$card-shadow: #685243;
+$card-bg: #dddc;
 
 //animations
