width added to expanded card

--- a/src/Components/RecipeCard/RecipeCard.scss
+++ b/src/Components/RecipeCard/RecipeCard.scss
@@ -10,6 +10,7 @@
   "link yt img"
   "tags cat img";
   grid-template-columns: repeat(3, 1fr);
+  width: 80%;
 
   h5 {
     font-family: $fancy-font;
