Router Switch is working, working to get to /recipes on button click

--- a/src/Scss/index.scss
+++ b/src/Scss/index.scss
@@ -1,7 +1,7 @@
 @import 'Variables';
 @import '../Components/App/App.scss';
 @import '../Components/Header/Header.scss';
-@import '../Containers/Results/Results.scss';
+@import '../Components/Home/Home.scss';
 @import '../Containers/Form/Form.scss';
 @import '../Components/Instructions/Instructions.scss';
 @import '../Components/Footer/Footer.scss';
