--- a/src/Scss/index.scss
+++ b/src/Scss/index.scss
@@ -7,3 +7,4 @@
 @import '../Components/Footer/Footer.scss';
 @import '../Components/RecipeCard/RecipeCard.scss';
 @import '../Components/NoMatch/NoMatch.scss';
+@import '../Containers/Recipes/Recipes.scss';
