--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,9 +1,27 @@
 .Header {
+  display: grid;
+  grid-template-areas: ". title fave";
+  grid-template-columns: repeat(3, 1fr);
   font-family: $fancy-font;
   font-size: 1.5rem;
+  margin: 1rem;
   
   h1 {
+    grid-area: title;
     margin: 0 auto;
     text-align: center;
+  }
+
+  .fave-link {
+    color: black;
+    grid-area: fave;
+    margin: 0 auto;
+    text-align: center;
+    text-decoration: none;
+
+    &:hover {
+      color: $fave;
+      text-decoration: underline;
+    }
   }
 }
