--- a/src/Components/RecipeCard/RecipeCard.scss
+++ b/src/Components/RecipeCard/RecipeCard.scss
@@ -73,10 +73,11 @@
   }
 
   .fave {
-    position: relative;
+    color: white;
     bottom: -70%;
-    right: -290%;
     height: 5rem;
+    position: relative;
+    right: -290%;
 
     &:hover {
       cursor: pointer;
