--- a/src/Components/RecipeCard/RecipeCard.scss
+++ b/src/Components/RecipeCard/RecipeCard.scss
@@ -5,10 +5,11 @@
   box-shadow: 1px 1px 3px $card-shadow;
   display: grid;
   font-family: $body-font;
+  grid-area: recipes;
   grid-template-areas: "name name img"
   "ing ing img"
   "inst inst inst"
-  "link yt .";
+  "link yt tags";
   grid-template-columns: repeat(3, 1fr);
   margin-top: 2rem;
   padding: 1rem;
@@ -16,7 +17,7 @@
 
   h5 {
     font-family: $fancy-font;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     grid-area: name;
     margin: 0;
     text-decoration: underline;
@@ -24,6 +25,7 @@
 
   section {
     grid-area: ing;
+    font-size: .8rem;
   }
 
   .instr {
@@ -54,16 +56,18 @@
   .tags {
     color: $fave;
     font-weight: bolder;
+    grid-area: tags;
     margin: auto;
+    // max-width: 14rem;
+    // word-wrap: break-word;
   }
 
   .meal-pic {
     grid-area: img;
-    width: 100%;
+    max-width: 10rem;
   }
 
   section p {
-
     margin: 0;
 
     span {
