--- a/src/Containers/Form/Form.scss
+++ b/src/Containers/Form/Form.scss
@@ -4,6 +4,8 @@
   flex-direction: row;
   grid-area: form;
   justify-content: space-around;
+  margin: auto;
+  width: 80%;
 
   .Dropdown-root {
     border-radius: 2px;
