update file name for build on aws

--- a/src/Scss/index.scss
+++ b/src/Scss/index.scss
@@ -1,4 +1,4 @@
-@import 'Variables';
+@import 'variables';
 @import '../Components/App/App.scss';
 @import '../Components/Header/Header.scss';
 @import '../Components/Home/Home.scss';
